--- a/about.html
+++ b/about.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Required meta tags always come first -->
+    <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1 shrink-to-fit=no"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+
+    <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
       href="node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="node_modules/font-awesome/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="node_modules/bootstrap-social/bootstrap-social.css"
+    />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Ristorante Con Fusion: About Us</title>
+    <title>Ristorante Con Fusion</title>
   </head>
 
   <body>
@@ -29,14 +42,26 @@
         >
         <div class="collapse navbar-collapse" id="menu-bar">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a href="./index.html" class="nav-link">Home</a>
-            </li>
             <li class="nav-item active">
-              <a href="./about.html" class="nav-link">About</a>
+              <a href="./index.html" class="nav-link"
+                ><span class="fa fa-home fa-lg"></span> Home</a
+              >
             </li>
-            <li class="nav-item"><a href="#" class="nav-link">Menu</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+            <li class="nav-item">
+              <a href="./about.html" class="nav-link"
+                ><span class="fa fa-info-circle fa-lg"></span> About</a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link"
+                ><span class="fa fa-list fa-lg"></span> Menu</a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link"
+                ><span class="fa fa-address-book fa-lg"></span> Contact</a
+              >
+            </li>
           </ul>
         </div>
       </div>
@@ -158,19 +183,42 @@
               121, Clear Water Bay Road<br />
               Clear Water Bay, Kowloon<br />
               HONG KONG<br />
-              Tel.: +852 1234 5678<br />
-              Fax: +852 8765 4321<br />
-              Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
+              <i class="fa fa-phone"></i> +852 1234 5678<br />
+              <i class="fa fa-fax"></i> +852 8765 4321<br />
+              <i class="fa fa-envelope"></i>
+              <a href="mailto:confusion@food.net">confusion@food.net</a>
             </address>
           </div>
           <div class="col-12 col-sm-4 align-self-center">
             <div class="text-center">
-              <a href="http://google.com/+">Google+</a>
-              <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
-              <a href="http://www.linkedin.com/in/">LinkedIn</a>
-              <a href="http://twitter.com/">Twitter</a>
-              <a href="http://youtube.com/">YouTube</a>
-              <a href="mailto:">Mail</a>
+              <a
+                href="http://google.com/+"
+                class="btn btn-social-icon btn-google"
+                ><i class="fa fa-google"></i
+              ></a>
+              <a
+                href="http://www.facebook.com/profile.php?id="
+                class="btn btn-social-icon btn-facebook"
+                ><i class="fa fa-facebook"></i
+              ></a>
+              <a
+                href="http://www.linkedin.com/in/"
+                class="btn btn-social-icon btn-linkedin"
+                ><i type="button" class="fa fa-linkedin"></i
+              ></a>
+              <a
+                href="http://twitter.com/"
+                class="btn btn-social-icon btn-twitter"
+                ><i class="fa fa-twitter"></i
+              ></a>
+              <a
+                href="http://youtube.com/"
+                class="btn btn-social-icon btn-google"
+                ><i class="fa fa-youtube"></i
+              ></a>
+              <a href="mailto:" class="btn btn-social-icon btn-adn"
+                ><i class="fa fa-envelope"></i
+              ></a>
             </div>
           </div>
         </div>
