--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               >
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link"
+              <a href="./contact.html" class="nav-link"
                 ><span class="fa fa-address-book fa-lg"></span> Contact</a
               >
             </li>
@@ -139,7 +139,7 @@
               <li><a href="./index.html">Home</a></li>
               <li><a href="./about.html">About</a></li>
               <li><a href="#">Menu</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="./contact.html">Contact</a></li>
             </ul>
           </div>
           <div class="col-7 col-sm-5">
