--- a/contact.html
+++ b/contact.html
@@ -134,7 +134,118 @@
         <div class="col-12">
           <h3>Send us your Feedback</h3>
         </div>
-        <div class="col-12 col-md-9">Form goes here</div>
+        <div class="col-12 col-md-9">
+          <form action="">
+            <div class="form-group row">
+              <label for="firstname" class="col-md-3 col-lg-2 col-form-label"
+                >First Name</label
+              >
+              <div class="col-md-9 col-lg-10">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="firstname"
+                  name="firstname"
+                  placeholder="First Name"
+                />
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="lastname" class="col-md-3 col-lg-2 col-form-label"
+                >Last Name</label
+              >
+              <div class="col-md-9 col-lg-10">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="lastname"
+                  name="lastname"
+                  placeholder="Last Name"
+                />
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="phone" class="col-md-3 col-lg-2 col-form-label">
+                Phone
+              </label>
+              <div class="col-4 col-md-3 col-lg-3">
+                <input
+                  type="tel"
+                  class="form-control"
+                  id="areacode"
+                  name="areacode"
+                  placeholder="areacode"
+                />
+              </div>
+              <div class="col-8 col-md-6 col-lg-7">
+                <input
+                  type="tel"
+                  class="form-control"
+                  id="phone"
+                  name="phone"
+                  placeholder="Phone Number"
+                />
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="emailId" class="col-md-3 col-lg-2 col-form-label">
+                Email ID
+              </label>
+              <div class="col-md-9 col-lg-10">
+                <input
+                  type="email"
+                  class="form-control"
+                  id="email"
+                  name="email"
+                  placeholder="you@example.com"
+                />
+              </div>
+            </div>
+            <div class="form-group row">
+              <div class="col-md-5 offset-md-3 col-lg-5 offset-lg-2">
+                <div class="form-check">
+                  <input
+                    type="checkbox"
+                    class="form-check-input"
+                    name="approve"
+                    id="approve"
+                    value=""
+                  />
+                  <label for="approve" class="form-check-label">
+                    <strong>May we contact you?</strong>
+                  </label>
+                </div>
+              </div>
+              <div class="col-md-4 col-lg-3 offset-lg-2">
+                <select class="form-control">
+                  <option value="">Mobile</option>
+                  <option value="">Email</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="feedback" class="col-md-3 col-lg-2">
+                Your Feedback
+              </label>
+              <div class="col-md-9 col-lg-10">
+                <textarea
+                  class="form-control"
+                  id="feedback"
+                  name="feedback"
+                  rows="5"
+                  placeholder="Enter Your Response..."
+                ></textarea>
+              </div>
+            </div>
+            <div class="form-group row">
+              <div class="col-md-9 offset-md-3 col-lg-10 offset-lg-2">
+                <button type="submit" class="btn btn-primary">
+                  Send Feedback
+                </button>
+              </div>
+            </div>
+          </form>
+        </div>
         <div class="col-12 col-md"></div>
       </div>
     </div>
