--- a/about.html
+++ b/about.html
@@ -42,12 +42,12 @@
         >
         <div class="collapse navbar-collapse" id="menu-bar">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a href="./index.html" class="nav-link"
                 ><span class="fa fa-home fa-lg"></span> Home</a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a href="./about.html" class="nav-link"
                 ><span class="fa fa-info-circle fa-lg"></span> About</a
               >
@@ -113,7 +113,39 @@
             cuisines in a pan.
           </p>
         </div>
-        <div></div>
+        <div class="col-12 col-sm-6">
+          <div class="card">
+            <h3 class="card-header bg-primary text-white">Facts at a Glance</h3>
+            <div class="card-body">
+              <dl class="row">
+                <dt class="col-6">Started</dt>
+                <dd class="col-6">2 Feb 2018</dd>
+                <dt class="col-6">Major Stake Holder</dt>
+                <dd class="col-6">HK Fine Foods Inc.</dd>
+                <dt class="col-6">Last Year's Turnover</dt>
+                <dd class="col-6">$4490000</dd>
+                <dt class="col-6">Employees</dt>
+                <dd class="col-6">100</dd>
+              </dl>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 mt-4">
+          <div class="card card-body bg-light">
+            <blockquote class="blockquote">
+              <p class="mb-0">
+                You better cut pizza in four pieces because I'm not hungry
+                enough to eat six.
+              </p>
+            </blockquote>
+            <footer class="blockquote-footer">
+              Yogi Berra,
+              <cite title="Source Title">
+                The Wit and Wisdom of Yogi Berra, P. Pepe, Diversion Books, 2014
+              </cite>
+            </footer>
+          </div>
+        </div>
       </div>
 
       <div class="row row-content">
@@ -163,6 +195,50 @@
           </p>
         </div>
       </div>
+
+      <div class="row row-content">
+        <div class="col-sm-9">
+          <h2>Facts &amp; Figures</h2>
+          <div class="table-respoensive">
+            <table class="table table-striped">
+              <thead class="thead-dark">
+                <tr>
+                  <th></th>
+                  <th>2018</th>
+                  <th>2019</th>
+                  <th>2020</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th>Employees</th>
+                  <td>15</td>
+                  <td>40</td>
+                  <td>100</td>
+                </tr>
+                <tr>
+                  <th>Guests Served</th>
+                  <td>15000</td>
+                  <td>80000</td>
+                  <td>300000</td>
+                </tr>
+                <tr>
+                  <th>Special Events</th>
+                  <td>5</td>
+                  <td>25</td>
+                  <td>50</td>
+                </tr>
+                <tr>
+                  <th>Annual Turnover</th>
+                  <td>$230000</td>
+                  <td>$950000</td>
+                  <td>$4490000</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
     </div>
 
     <footer class="footer">
@@ -193,7 +269,7 @@
             <div class="text-center">
               <a
                 href="http://google.com/+"
-                class="btn btn-social-icon btn-google"
+                class="btn btn-social-icon btn-google mt-2 mb-2"
                 ><i class="fa fa-google"></i
               ></a>
               <a
