Images and Media

--- a/about.html
+++ b/about.html
@@ -37,9 +37,9 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a href="./index.html" class="navbar-brand mr-auto"
-          >Ristorante Con Fusion</a
-        >
+        <a href="./index.html" class="navbar-brand mr-auto">
+          <img src="./img/logo.png" height="30" width="auto" />
+        </a>
         <div class="collapse navbar-collapse" id="menu-bar">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
@@ -78,7 +78,9 @@
               your culinary senses!
             </p>
           </div>
-          <div class="col-12 col-sm"></div>
+          <div class="col-12 col-sm align-self-center">
+            <img src="./img/logo.png" class="img-fluid" />
+          </div>
         </div>
       </div>
     </header>
