--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
         </div>
         <div class="col-12 col-sm-11 offset-sm-1">
           <div class="btn-group" role="button-group">
-            <a class="btn btn-danger" role="button" href="tel:+917736220495"
+            <a class="btn btn-danger" role="button" href="tel:+9145677889"
               ><i class="fa fa-phone"></i> Call</a
             >
             <a class="btn btn-primary" role="button"
@@ -127,7 +127,7 @@
             <a
               class="btn btn-success"
               role="button"
-              href="mailto:anmolkumar.mca19@bmsce.ac.in"
+              href="mailto:you@example.com"
               ><i class="fa fa-envelope"></i> Email</a
             >
           </div>
