--- a/index.html
+++ b/index.html
@@ -78,8 +78,11 @@
               your culinary senses!
             </p>
           </div>
-          <div class="col-12 col-sm align-self-center">
+          <div class="col-12 col-sm-3 align-self-center">
             <img src="./img/logo.png" class="img-fluid" />
+          </div>
+          <div class="col-12 col-sm-3 align-self-center">
+            <a href="#reserve_table" type="button" class="btn btn-block btn-warning">Reserve Table</a>
           </div>
         </div>
       </div>
@@ -114,9 +117,10 @@
         </div>
         <div class="col col-sm col-md">
           <div class="media">
-            <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/buffet.png" alt="">
             <div class="media-body">
-              <h2 class="mt-0">Weekend Grand Buffet</h2>
+              <h2 class="mt-0">Weekend Grand Buffet
+                <span class="badge badge-danger">NEW</span>
+              </h2>
               <p class="d-none d-sm-block">
                 Featuring mouthwatering combinations with a choice of five different
                 salads, six enticing appetizers, six main entrees and five choicest
@@ -124,6 +128,7 @@
                 per person
               </p>
             </div>
+            <img class="d-flex ml-3 img-thumbnail align-self-center" src="img/buffet.png" alt="">
           </div>
         </div>
       </div>
@@ -145,6 +150,55 @@
                 experiences.
               </p>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row row-content" id="reserve_table">
+      <div class="col-12 col-sm-10 offset-sm-1 col-lg-8 offset-lg-2 col-xl-6 offset-xl-3">
+        <div class="card">
+          <div class="card-header bg-warning">
+            <h2>Reserve a Table</h2>
+          </div>
+          <div class="card-body">
+            <form>
+              <div class="row form-group">
+                <div class="col-12 col-md-4">
+                  <label for="" class="">Number Of Guests</label>
+                </div>
+                <div class="col-12 col-md-8">
+                  <input type="radio" id="num_1" name="num_of_guest" value="1">
+                  <label for="num_1"> 1</label>
+                  <input type="radio" id="num_2" name="num_of_guest" value="2">
+                  <label for="num_2"> 2</label>
+                  <input type="radio" id="num_3" name="num_of_guest" value="3">
+                  <label for="num_3"> 3</label>
+                  <input type="radio" id="num_4" name="num_of_guest" value="4">
+                  <label for="num_4"> 4</label>
+                  <input type="radio" id="num_5" name="num_of_guest" value="5">
+                  <label for="num_5"> 5</label>
+                  <input type="radio" id="num_6" name="num_of_guest" value="6">
+                  <label for="num_6"> 6</label>
+                </div>
+              </div>
+              <div class="row form-group">
+                <div class="col-12 col-md-4">
+                  <label for="">Date and Time</label>
+                </div>
+                <div class="col-6 col-md-4">
+                  <input type="text" name="date" class="form-control" placeholder="Date">
+                </div>
+                <div class="col-6 col-md-4">
+                  <input type="text" name="time" class="form-control" placeholder="Time">
+                </div>
+              </div>
+              <div class="row form-group">
+                <div class="col-12 offset-md-4 col-md-8">
+                  <input type="submit" value="Reserve" class="btn btn-primary">
+                </div>
+              </div>
+            </form>
           </div>
         </div>
       </div>
