Tooltip and Modal

--- a/index.html
+++ b/index.html
@@ -63,9 +63,45 @@
               >
             </li>
           </ul>
+          <span class="navbar-text">
+            <a data-toggle="modal" data-target="#loginModal">
+              <span class="fa fa-sign-in"></span> Login
+            </a>
+          </span>
         </div>
       </div>
     </nav>
+
+    <div id="loginModal" class="modal fade" role="dialog">
+      <div class="modal-dialog modal-sm" role="content">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h3 class="modal-title">Login</h3>
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group">
+                <label for="username">Username: </label>
+                <input type="text" class="form-control" name="username" placeholder="Username">
+              </div>
+              <div class="form-group">
+                <label for="password">Password: </label>
+                <input type="password" class="form-control" placeholder="Password"> 
+              </div>
+              <div class="form-group">
+                <input type="checkbox" value="remember" name="remember">
+                <label for="remember"> Remember Me</label>
+              </div>
+              <div class="form-group">
+                <input type="submit" class="btn btn-primary" value="Sign In">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <header class="jumbotron">
       <div class="container">
@@ -82,7 +118,7 @@
             <img src="./img/logo.png" class="img-fluid" />
           </div>
           <div class="col-12 col-sm-3 align-self-center">
-            <a href="#reserve_table" type="button" class="btn btn-block btn-warning">Reserve Table</a>
+            <a href="#reserve_table" type="button" class="btn btn-block btn-warning" data-toggle="tooltip" data-html="true" title="or Call at Us<br><strong>+040-4445-3434</strong>" data-placement="bottom">Reserve Table</a>
           </div>
         </div>
       </div>
@@ -273,5 +309,10 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script>
+      $(document).ready(function() {
+        $('[data-toggle="tooltip"]').tooltip();
+      });
+    </script>
   </body>
 </html>
