--- a/contact.html
+++ b/contact.html
@@ -118,18 +118,14 @@
         </div>
         <div class="col-12 col-sm-11 offset-sm-1">
           <div class="btn-group" role="button-group">
-            <a class="btn btn-danger" role="button" href="tel:+9145677889"
-              ><i class="fa fa-phone"></i> Call</a
-            >
-            <a class="btn btn-primary" role="button"
-              ><i class="fa fa-skype"></i> Skype</a
-            >
+            <a class="btn btn-danger" role="button" href="tel:+9145677889"><i class="fa fa-phone"></i> Call</a>
+            <a class="btn btn-primary" role="button"><i class="fa fa-skype"></i> Skype</a>
             <a
               class="btn btn-success"
               role="button"
               href="mailto:you@example.com"
-              ><i class="fa fa-envelope"></i> Email</a
-            >
+              ><i class="fa fa-envelope"></i> Email
+            </a>
           </div>
         </div>
       </div>
