--- a/index.html
+++ b/index.html
@@ -103,6 +103,72 @@
       </div>
     </div>
 
+    <div id="reserve_table" class="modal fade" role="dialog">
+      <div class="modal-dialog modal-lg" role="content">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h3 class="modal-title">Reserve Table</h3>
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="row form-group">
+                <div class="col-12 col-md-4">
+                  <label for="" class="">Number Of Guests</label>
+                </div>
+                <div class="col-12 col-md-8">
+                  <input type="radio" id="num_1" name="num_of_guest" value="1">
+                  <label for="num_1"> 1 </label>
+                  <input type="radio" id="num_2" name="num_of_guest" value="2">
+                  <label for="num_2"> 2 </label>
+                  <input type="radio" id="num_3" name="num_of_guest" value="3">
+                  <label for="num_3"> 3 </label>
+                  <input type="radio" id="num_4" name="num_of_guest" value="4">
+                  <label for="num_4"> 4 </label>
+                  <input type="radio" id="num_5" name="num_of_guest" value="5">
+                  <label for="num_5"> 5 </label>
+                  <input type="radio" id="num_6" name="num_of_guest" value="6">
+                  <label for="num_6"> 6</label>
+                </div>
+              </div>
+              <div class="row form-group">
+                <div class="col-12 col-md-4">
+                  <label for="section">Section</label>
+                </div>
+                <div class="col-12 col-md-8">
+                  <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                    <label class="btn btn-success active">
+                      <input type="radio" name="section" id="non-smoking" value="non_smoking" checked>Non-Smoking
+                    </label>
+                    <label class="btn btn-danger">
+                      <input type="radio" name="section" id="smoking" value="smoking">Smoking
+                    </label>
+                  </div>
+                </div>
+              </div>
+              <div class="row form-group">
+                <div class="col-12 col-md-4">
+                  <label for="">Date and Time</label>
+                </div>
+                <div class="col-6 col-md-4">
+                  <input type="text" name="date" class="form-control" placeholder="Date">
+                </div>
+                <div class="col-6 col-md-4">
+                  <input type="text" name="time" class="form-control" placeholder="Time">
+                </div>
+              </div>
+              <div class="row form-group">
+                <div class="col-12 offset-md-4 col-md-8">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                  <input type="submit" value="Reserve" class="btn btn-primary">
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <header class="jumbotron">
       <div class="container">
         <div class="row row-header">
@@ -118,7 +184,8 @@
             <img src="./img/logo.png" class="img-fluid" />
           </div>
           <div class="col-12 col-sm-3 align-self-center">
-            <a href="#reserve_table" type="button" class="btn btn-block btn-warning" data-toggle="tooltip" data-html="true" title="or Call at Us<br><strong>+040-4445-3434</strong>" data-placement="bottom">Reserve Table</a>
+            <!-- <a href="#reserve_table" type="button" class="btn btn-block btn-warning" data-toggle="tooltip" data-html="true" title="or Call at Us<br><strong>+040-4445-3434</strong>" data-placement="bottom">Reserve Table</a> -->
+            <a type="button" class="btn btn-block btn-warning" data-toggle="modal" data-target="#reserve_table">Reserve Table</a>
           </div>
         </div>
       </div>
@@ -225,54 +292,7 @@
       </div>
     </div>
 
-    <div class="row row-content" id="reserve_table">
-      <div class="col-12 col-sm-10 offset-sm-1 col-lg-8 offset-lg-2 col-xl-6 offset-xl-3">
-        <div class="card">
-          <div class="card-header bg-warning">
-            <h2>Reserve a Table</h2>
-          </div>
-          <div class="card-body">
-            <form>
-              <div class="row form-group">
-                <div class="col-12 col-md-4">
-                  <label for="" class="">Number Of Guests</label>
-                </div>
-                <div class="col-12 col-md-8">
-                  <input type="radio" id="num_1" name="num_of_guest" value="1">
-                  <label for="num_1"> 1</label>
-                  <input type="radio" id="num_2" name="num_of_guest" value="2">
-                  <label for="num_2"> 2</label>
-                  <input type="radio" id="num_3" name="num_of_guest" value="3">
-                  <label for="num_3"> 3</label>
-                  <input type="radio" id="num_4" name="num_of_guest" value="4">
-                  <label for="num_4"> 4</label>
-                  <input type="radio" id="num_5" name="num_of_guest" value="5">
-                  <label for="num_5"> 5</label>
-                  <input type="radio" id="num_6" name="num_of_guest" value="6">
-                  <label for="num_6"> 6</label>
-                </div>
-              </div>
-              <div class="row form-group">
-                <div class="col-12 col-md-4">
-                  <label for="">Date and Time</label>
-                </div>
-                <div class="col-6 col-md-4">
-                  <input type="text" name="date" class="form-control" placeholder="Date">
-                </div>
-                <div class="col-6 col-md-4">
-                  <input type="text" name="time" class="form-control" placeholder="Time">
-                </div>
-              </div>
-              <div class="row form-group">
-                <div class="col-12 offset-md-4 col-md-8">
-                  <input type="submit" value="Reserve" class="btn btn-primary">
-                </div>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
+    
 
     <footer class="footer">
       <div class="container">
@@ -343,10 +363,10 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
+    <!-- <script>
       $(document).ready(function() {
         $('[data-toggle="tooltip"]').tooltip();
       });
-    </script>
+    </script> -->
   </body>
 </html>
