--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
     <div class="container">
       <div class="row row-content">
-        <div class="col">
+        <div class="col-12">
           <div id="mycarousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner" role="listbox">
               <div class="carousel-item active">
@@ -236,14 +236,9 @@
           <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
             <span class="carousel-control-next-icon"></span>
           </a>
-          <div class="btn-group" id="carouselButton">
-            <button class="btn btn-danger" id="carouselPause">
-              <span class="fa fa-pause"></span>
-            </button>
-            <button class="btn btn-success" id="carouselPlay">
-              <span class="fa fa-play"></span>
-            </button>
-          </div>
+          <button class="btn btn-danger" id="carouselButton">
+            <span class="fa fa-pause"></span>
+          </button>
         </div>
       </div>
 
@@ -299,8 +294,6 @@
         </div>
       </div>
     </div>
-
-    
 
     <footer class="footer">
       <div class="container">
@@ -373,11 +366,16 @@
       $(document).ready(function() {
         // $('[data-toggle="tooltip"]').tooltip();
         $('#mycarousel').carousel({interval:2000});
-        $('#carouselPause').click(function() {
-          $('#mycarousel').carousel('pause');
-        });
-        $('#carouselPlay').click(function() {
-          $('#mycarousel').carousel('cycle');
+        $('#carouselButton').click(function() {
+          if($('#carouselButton').children('span').hasClass('fa-pause')) {
+            $('#mycarousel').carousel('pause');
+            $('#carouselButton').children('span').removeClass('fa-pause');
+            $('#carouselButton').children('span').addClass('fa-play');
+          } else {
+            $('#mycarousel').carousel('cycle');
+            $('#carouselButton').children('span').removeClass('fa-play');
+            $('#carouselButton').children('span').addClass('fa-pause');
+          }
         });
       });
     </script>
